v1.0.12.0 - unreleased
======================
 NEW    : Support for Flash video (FLV4, VP5,VP6), XVID and DivX using ffmpeg codec
 NEW	: Custom presenter now support DXVA2, and display decoder mode in Jitter test information.
 CHANGED: FAAD library updated to 2.6
 FIXED  : Incorrect colors on video when using YUV mixing and "VMR Color controls"
 FIXED  : EVR custom didn't display image with Microsoft MPEG2 decoder (Vista)
 FIXED  : PN31 driver installation was not working
 FIXED  : MPC graph manager now use the same filter priority as WMP and graphedit (clsid patch)
 FIXED  : MPC-HC is now recognize as an application by SUMo (http://www.kcsoftwares.com/index.php?sumo)
 FIXED  : Ghost horizontal and vertical lines with Pixel Shader resizer (especially on ATI graphics card)

v1.0.11.0 - 14.Oct 2007
======================
 NEW    : Command Line Option "/dubdelay" applies a positive or negative audio delay of ???ms, if filename contains "DELAY ???ms" (internal Audio Switcher required)
 NEW    : Russian, Turkish, Czech, Spanish and Hungarian translations
 NEW    : Internal AVI splitter support AMV files (need an ffdshow update to decode)
 CHANGED: Filetype association. MPC is now recognized as a registered media player application. Filetype registration now compatible with UAC. (Vista)
 CHANGED: Matroska internal subtitles are not loaded if "auto-load subtitles" option is off
 CHANGED: Allow DirectShow to use a disabled internal source and transform filters when no other suitable filter is available
 FIXED  : Subtitle popup menu not working in French
 FIXED  : Remember file position option not working properly in playlist mode
 FIXED  : Crash when opening "Navigation" menu while playing dvd (German locale only)
 FIXED  : Memory leak with window resize
 FIXED  : Many GUI related things
 FIXED  : Crash when opening zero byte length MP3 files
 FIXED  : Crash when using "Save thumbnails" with number of row or column greater than 8 (now internally limited to 8)
